--- a/restaurent.html
+++ b/restaurent.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/restaurent.css">
+    <link rel="stylesheet" href="css/kharjat.css">
     <link rel="stylesheet" href="css/style.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <link rel="shortcut icon" href="image/ic-resto.png" type="image/x-icon">
+    <link rel="shortcut icon" href="image/img-haous-bladek.png" type="image/x-icon">
 
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
@@ -14,14 +15,14 @@
 </head>
 <body>
 
-    <header>
+    <header style="background-color: #4d869c;">
         <div class="logo">
             <img src="image/img-haous-bladek.png" alt="logo" height="60px">
         </div>
         <ul class="menu">
-            <li><a href="index.html">Accueil</a></li>
-            <li><a href="#service">Service</a></li>
-            <li><a href="#">contact</a></li>        
+            <li><a href="index.html" style="text-decoration: none;">Accueil</a></li>
+            <li><a href="#service" style="text-decoration: none;">Service</a></li>
+            <li><a href="#" style="text-decoration: none;">contact</a></li>        
         </ul>
         <div class="search" style="margin-right: 40px;">
             <svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 20 20">
@@ -29,8 +30,13 @@
             </svg>
         </div>
     </header>
-    <div class="restorant">
-        <span class="MyrestorantTitle">Nos restaurants</span>
+
+
+
+    <div class="restaurent" >
+        <span class="MyBusTitle">Nos restaurents</span>
+        <p class="text-center d-flex mx-auto text-white" id="special-text" style="width: 70%">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime veritatis ab minus nostrum dignissimos inventore voluptas autem eum eligendi. Officia libero nobis commodi. Expedita blanditiis quibusdam quos error repudiandae culpa?</p>
+        
     </div>
 
 
@@ -49,7 +55,7 @@
                             <img src="image/etoil4.png" alt="Bardo" class="star">
                         </div>
 
-                        <button id="check-offer">Check the offer</button>
+                        <p >Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque, veniam.  adipisicing elit. Itaque, veniam.</p>
                     </div>
 
             </div>
@@ -64,7 +70,7 @@
                             <img src="image/etoil4.png" alt="star" class="star">
                         </div>
 
-                        <button id="check-offer">Check the offer</button>
+                        <p >Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque, veniam.  adipisicing elit. Itaque, veniam.</p>
                     </div>
 
             </div>
@@ -78,7 +84,7 @@
                             <img src="image/etoil4.png" alt="star" class="star">
                         </div>
 
-                        <button id="check-offer">Check the offer</button>
+                        <p >Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque, veniam.  adipisicing elit. Itaque, veniam.</p>
                     </div>
 
             </div>
@@ -92,7 +98,7 @@
                             <img src="image/etoil4.png" alt="star" class="star">
                         </div>
 
-                        <button id="check-offer">Check the offer</button>
+                        <p >Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque, veniam.  adipisicing elit. Itaque, veniam.</p>
                     </div>
 
             </div>
@@ -112,7 +118,7 @@
                             <h6>1 209 review</h6>
                             <img src="image/etoil4.png" alt="Bardo" class="star">
                         </div>
-                        <button id="check-offer">Check the offer</button>
+                        <p >Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque, veniam.  adipisicing elit. Itaque, veniam.</p>
                     </div>
 
             </div>
@@ -126,7 +132,7 @@
                             <img src="image/etoil4.png" alt="star" class="star">
                         </div>
 
-                        <button id="check-offer">Check the offer</button>
+                        <p >Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque, veniam.  adipisicing elit. Itaque, veniam.</p>
                     </div>
 
             </div>
@@ -140,7 +146,7 @@
                             <img src="image/etoil4.png" alt="star" class="star">
                         </div>
 
-                        <button id="check-offer">Check the offer</button>
+                        <p >Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque, veniam.  adipisicing elit. Itaque, veniam.</p>
                     </div>
 
             </div>
@@ -154,7 +160,7 @@
                             <img src="image/etoil4.png" alt="star" class="star">
                         </div>
 
-                        <button id="check-offer">Check the offer</button>
+                        <p >Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque, veniam.  adipisicing elit. Itaque, veniam.</p>
                     </div>
 
             </div>
@@ -175,7 +181,7 @@
                             <img src="image/etoil4.png" alt="star" class="star">
                         </div>
 
-                        <button id="check-offer">Check the offer</button>
+                        <p >Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque, veniam.  adipisicing elit. Itaque, veniam.</p>
                     </div>
 
             </div>
@@ -188,7 +194,7 @@
                             <img src="image/etoil4.png" alt="star" class="star">
                         </div>
 
-                        <button id="check-offer">Check the offer</button>
+                        <p >Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque, veniam.  adipisicing elit. Itaque, veniam.</p>
                     </div>
 
             </div>
@@ -202,7 +208,7 @@
                             <img src="image/etoil4.png" alt="star" class="star">
                         </div>
 
-                        <button id="check-offer">Check the offer</button>
+                        <p >Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque, veniam.  adipisicing elit. Itaque, veniam.</p>
                     </div>
 
             </div>
@@ -216,7 +222,7 @@
                             <img src="image/etoil4.png" alt="star" class="star">
                         </div>
 
-                        <button id="check-offer">Check the offer</button>
+                        <p >Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque, veniam.  adipisicing elit. Itaque, veniam.</p>
                     </div>
 
             </div>
