--- a/index.html
+++ b/index.html
@@ -206,6 +206,7 @@
                     <a href=""><img src="image/ic-insta.svg" alt="Instagram"></a>
                     <a href=""><img src="image/ic-fb.svg" alt="faceboock"></a>
                     <a href=""><img src="image/ic-tiktok.svg" alt="tiktok"></a>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vero, distinctio. Explicabo quos velit sequi quaerat cupiditate exercitationem voluptates animi dicta a nostrum quasi sed facilis, mollitia nisi modi fugit dolore.</p>
                     <p>Hawous Bladek</p>
                 </div>
             </div>
